Fixed messages page align

--- a/src/containers/account/messenger/Messenger.scss
+++ b/src/containers/account/messenger/Messenger.scss
@@ -32,11 +32,15 @@
 }
 
 .messages {
-	height: 100vh;
+	height: calc(100vh - 135px);
 	
 	.col-md-3,
 	.col-md-9 {
 		max-height: 100%;
+	}
+
+	@media (max-width: 768px) {
+		height: auto;
 	}
 }
 
@@ -48,15 +52,10 @@
 	& > * {
 		height: 100%;
 	}
-	.left-bar, .right-bar {
-		height: 100%;
-	}
 	
 	
 		
-		// @media (max-width: 768px) {
-		// 	height: calc(100vh - 168px);
-		// }
+		
 }
 
 .card {
